Enable facebook integration.

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -26,6 +26,26 @@
     <!-- After footer scripts -->
     <%- partial('_partial/after-footer') %>
 
+    <% if(theme.comments.facebook && theme.comments.facebook.appid) { %>
+        <div id="fb-root"></div>
+        <script type="text/javascript">
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId      : '<%= theme.comments.facebook.appid %>',
+              xfbml      : true,
+              version    : 'v2.8'
+            });
+          };
+
+          (function(d, s, id){
+             var js, fjs = d.getElementsByTagName(s)[0];
+             if (d.getElementById(id)) {return;}
+             js = d.createElement(s); js.id = id;
+             js.src = "//connect.facebook.net/en_US/sdk.js";
+             fjs.parentNode.insertBefore(js, fjs);
+           }(document, 'script', 'facebook-jssdk'));
+        </script>
+    <% } %>
 </body>
 
 </html>
