--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
 
     <!--Description-->
     <% if (page.description){ %>
@@ -20,6 +21,12 @@
         <meta name="author" content="<%= config.author %>">
     <% } %>
 
+    <!--Open Graph Type-->
+    <meta property="og:type" content="website"/>
+
+    <!--Open Graph URL-->
+    <meta property="og:url" content="<%= url %>"/>
+
     <!--Open Graph Title-->
     <% if (page.title){ %>
         <meta property="og:title" content="<%= page.title %>"/>
@@ -29,11 +36,7 @@
     <meta property="og:site_name" content="<%= config.title %>"/>
 
     <!--Page Cover-->
-    <% if(page.cover) { %>
-        <meta property="og:image" content="<%= page.cover %>" />
-    <% } else { %>
-        <meta property="og:image" content="<%= theme.cover %>"/>
-    <% } %>
+    <meta property="og:image" content="//kiwineko.tech<%= page.cover_index %>" />
 
     <!-- Fonts -->
     <link rel="stylesheet" type="text/css"
